--- a/ot-id.am.ditamap
+++ b/ot-id.am.ditamap
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA 2.0 Map//EN" "map.dtd">
 <map>
-    <title>Operational Technology Asset Management CSF Profile</title>
-    <topicref href="topics/nist.gov/SP800-82r3/id.am.md" format="markdown">
-        <topicref href="topics/nist.gov/SP800-82r3/id.am-3.md" format="markdown">
+    <title>Cybersecurity Framework 2.0 Profile</title>
+    <topicgroup>
+        <topichead>
+            <topicmeta>
+                <navtitle>Asset Management (ID.AM)</navtitle>
+            </topicmeta>
+            <topicref href="topics/nist.gov/id.am.dita#s-id.am"/>
+            <topicref href="topics/nist.gov/SP800-82r3/id.am.dita#gen-id.am"/>            
+            <topicref href="topics/nist.gov/SP800-82r3/id.am.dita#ot-id.am"/>            
+        </topichead>
+        <topichead>
+            <topicmeta>
+                <navtitle>Asset Management Subcategories</navtitle>
+            </topicmeta>
+            <topicgroup>
+                <topicref href="topics/nist.gov/id.am-03.md" format="markdown"/>
+                <topicref href="topics/nist.gov/SP800-82r3/id.am-03.md" format="markdown"/>
+            </topicgroup>
+        </topichead>
+    </topicgroup>
+    <topicref>
+        <topicref href="topics/nist.gov/id.am.md" format="markdown"/>
+        <topicref href="topics/nist.gov/SP800-82r3/id.am.md" format="markdown"/>            
+    </topicref>
+    <topicref>
+        <topicref href="topics/nist.gov/SP800-82r3/id.am-03.md" format="markdown">
             <topicmeta>
                 <navtitle>ID.AM-3</navtitle>
             </topicmeta>
-        </topicref>
+        </topicref>                    
     </topicref>
 </map>
