--- a/ot-id.am.ditamap
+++ b/ot-id.am.ditamap
@@ -9,10 +9,16 @@
             <topicref href="topics/nist.gov/SP800-82r3/id.am/ot.dita" audience="ot"/>            
         </topichead>
         <topichead navtitle="Asset Management Subcategories">
+            <topichead navtitle="ID.AM-01">
+                <topicref href="topics/nist.gov/id.am-01/statement.dita" audience="general"/>
+                <topicref href="topics/nist.gov/ASTM/id.am-01.md" audience="additive" format="markdown"/>
+                <topicref href="topics/nist.gov/id.am-01/imp-examples.dita" audience="general"/>                
+            </topichead>
             <topichead navtitle="ID.AM-03">
                 <topicref href="topics/nist.gov/id.am-03/statement.dita" audience="general"/>
                 <topicref href="topics/nist.gov/SP800-82r3/id.am-03/general.dita" audience="general"/>
                 <topicref href="topics/nist.gov/SP800-82r3/id.am-03/ot.dita" audience="ot"/>
+                <topicref href="topics/nist.gov/ASTM/id.am-03.md" audience="additive" format="markdown"/>
                 <topicref href="topics/nist.gov/id.am-03/imp-examples.dita" audience="general"/>
             </topichead>
         </topichead>
