--- a/topics/nist.gov/id.am-01/imp-examples.dita
+++ b/topics/nist.gov/id.am-01/imp-examples.dita
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="imp_examples">
-    <title></title>
+    <title>Implementation Examples</title>
     <body>
-        <p></p>
+        <ol>
+            <li>Maintain inventories for all types of hardware, including IT, IoT, OT, and mobile devices</li>
+            <li>Constantly monitor networks to detect new hardware and automatically update inventories</li>
+        </ol>
     </body>
 </topic>
