--- a/ot-id.am.ditamap
+++ b/ot-id.am.ditamap
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
-    <title>Cybersecurity Framework 2.0 Profile</title>
+    <title>Additive Manufacturing Asset Management Cybersecurity Framework 2.0 Profile</title>
     <topicgroup>
         <topichead navtitle="Asset Management (ID.AM)">
             <topicref href="topics/nist.gov/id.am.dita" audience="general"/>
