--- a/topics/nist.gov/id.am.dita
+++ b/topics/nist.gov/id.am.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA 2.0 Topic//EN" "topic.dtd">
 <topic id="s-id.am">
-    <title>Statement</title>
+    <title><keyword keyref="stmtHeadingText"/></title>
     <body>
         <p>Assets (e.g., data, hardware, software, systems, facilities, services, people) that enable the organization to achieve business purposes are identified and managed consistent with their relative importance to organizational objectives and the organization's risk strategy</p>
     </body>
