--- a/topics/nist.gov/SP800-82r3/id.am-03/general.dita
+++ b/topics/nist.gov/SP800-82r3/id.am-03/general.dita
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="gen-id.am-03">
-    <title>Supplemental Guidance</title>
+    <title><keyword keyref="guidanceHeadingText"/></title>
     <body>
-        <p>Data flow diagrams help a manufacturer understand the flow of data between networked components. Documenting data flows enables organizations to understand the expected behavior of their networks. This understanding of how devices communicate assists with troubleshooting as well as response and recovery activities. This information can be leveraged during forensic activities or used for analysis to identify anomalies.</p>
-        <p>Network architecture documentation tools help a manufacturer identify, document, and diagram the interconnections between networked devices, corporate networks, and other external connections. A comprehensive understanding of the interconnections within the environment is critical for the successful deployment of cybersecurity controls. This information is equally important for effective network monitoring.</p>
+        <p>Data flow diagrams help a manufacturer understand the flow of data between networked
+            components. Documenting data flows enables organizations to understand the expected
+            behavior of their networks. This understanding of how devices communicate assists with
+            troubleshooting as well as response and recovery activities. This information can be
+            leveraged during forensic activities or used for analysis to identify anomalies.</p>
+        <p>Network architecture documentation tools help a manufacturer identify, document, and
+            diagram the interconnections between networked devices, corporate networks, and other
+            external connections. A comprehensive understanding of the interconnections within the
+            environment is critical for the successful deployment of cybersecurity controls. This
+            information is equally important for effective network monitoring.</p>
     </body>
 </topic>
