--- a/topics/nist.gov/id.am-03/imp-examples.dita
+++ b/topics/nist.gov/id.am-03/imp-examples.dita
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="i-id.am-03">
-    <title>Implementation Examples</title>
+    <title><keyword keyref="implHeadingText"/></title>
     <body>
         <ol>
-            <li>Maintain baselines of communication and data flows within the organization's wired and wireless networks</li>
-            <li>Maintain baselines of communication and data flows between the organization and third parties</li>
-            <li>Maintain baselines of communication and data flows for the organization's infrastructure-as-a-service (IaaS) usage</li>
-            <li>Maintain documentation of expected network ports, protocols, and services that are typically used among authorized systems</li>
+            <li>Maintain baselines of communication and data flows within the organization's wired
+                and wireless networks</li>
+            <li>Maintain baselines of communication and data flows between the organization and
+                third parties</li>
+            <li>Maintain baselines of communication and data flows for the organization's
+                infrastructure-as-a-service (IaaS) usage</li>
+            <li>Maintain documentation of expected network ports, protocols, and services that are
+                typically used among authorized systems</li>
         </ol>
     </body>
 </topic>
