--- a/id.am-08.ditamap
+++ b/id.am-08.ditamap
@@ -3,6 +3,8 @@
 <map>
     <topichead navtitle="ID.AM-08">
         <topicref href="topics/nist.gov/id.am-08/statement.md" audience="general" product="csf20" format="markdown"/>
+        <topicref href="topics/nist.gov/SP800-82r3/pr.ds/ot.md" audience="ot" product="800-82" format="markdown"/>
+        <topicref href="topics/nist.gov/SP800-82r3/pr.ma/ot.md" audience="ot" product="800-82" format="markdown"/>
         <topicref href="topics/nist.gov/id.am-08/imp-examples.md" audience="general" product="csf20" format="markdown"/>
     </topichead>
 </map>
