--- a/id.am-08.ditamap
+++ b/id.am-08.ditamap
@@ -2,9 +2,9 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <topichead navtitle="ID.AM-08">
-        <topicref href="topics/nist.gov/id.am-08/statement.md" audience="general" product="csf20" format="markdown"/>
-        <topicref href="topics/nist.gov/SP800-82r3/pr.ds/ot.md" audience="ot" product="800-82" format="markdown"/>
-        <topicref href="topics/nist.gov/SP800-82r3/pr.ma/ot.md" audience="ot" product="800-82" format="markdown"/>
+        <topicref href="topics/nist.gov/id.am-08/statement.dita" audience="general" product="csf20"/>
+        <topicref href="topics/nist.gov/SP800-82r3/pr.ds/ot.dita" audience="ot" product="800-82"/>
+        <topicref href="topics/nist.gov/SP800-82r3/pr.ma/ot.dita" audience="ot" product="800-82"/>
         <topicref href="topics/nist.gov/id.am-08/imp-examples.md" audience="general" product="csf20" format="markdown"/>
     </topichead>
 </map>
