--- a/id.am-07.ditamap
+++ b/id.am-07.ditamap
@@ -4,8 +4,8 @@
     <topichead navtitle="ID.AM-07">
         <topicref href="topics/nist.gov/id.am-07/statement.dita" audience="general" product="csf20"/>
         <topicref href="topics/nist.gov/SP800-82r3/no-guidance.dita" product="800-82"/>
-        <topicref href="topics/nist.gov/ASTM/id.am-07.md" audience="additive" product="wk78322"
+        <topicref href="topics/nist.gov/ASTM/id.am-07/guidance.md" audience="additive" product="wk78322"
             format="markdown"/>
-        <topicref href="topics/nist.gov/id.am-07/imp-examples.md" audience="general" product="csf20" format="markdown"/>
+        <topicref href="topics/nist.gov/ASTM/id.am-07/imp-examples.md" audience="additive" product="wk78322" format="markdown"/>
     </topichead>
 </map>
