--- a/id.am-01.ditamap
+++ b/id.am-01.ditamap
@@ -3,7 +3,7 @@
 <map>
     <topichead navtitle="ID.AM-01">
         <topicref href="topics/nist.gov/id.am-01/statement.dita" audience="general" product="csf20"/>
-        <topicref href="topics/nist.gov/SP800-82r3/no-guidance.dita" product="800-82"/>
+        <topicref href="topics/nist.gov/NISTIR8183r1/id.am-01.dita" product="8183"/>
         <topicref href="topics/nist.gov/ASTM/id.am-01/additive.md" audience="additive" product="wk78322"
             format="markdown"/>
         <topicref href="topics/nist.gov/id.am-01/imp-examples.md" audience="general" product="csf20" format="markdown"/>
