--- a/id.am-01.ditamap
+++ b/id.am-01.ditamap
@@ -3,7 +3,11 @@
 <map>
     <topichead navtitle="ID.AM-01">
         <topicref href="topics/nist.gov/id.am-01/statement.dita" audience="general" product="csf20"/>
-        <topicref href="topics/nist.gov/NISTIR8183r1/id.am-01.dita" product="8183"/>
+        <topichead navtitle="Manufacturing Profile Guidance" product="8183" audience="mfg">
+            <topicref href="topics/nist.gov/NISTIR8183r1/id.am-01/L.dita"/>
+            <topicref href="topics/nist.gov/NISTIR8183r1/id.am-01/M.dita"/>
+            <topicref href="topics/nist.gov/NISTIR8183r1/id.am-01/H.dita"/>           
+        </topichead>
         <topicref href="topics/nist.gov/ASTM/id.am-01/additive.md" audience="additive" product="wk78322"
             format="markdown"/>
         <topicref href="topics/nist.gov/id.am-01/imp-examples.md" audience="general" product="csf20" format="markdown"/>
