--- a/id.am-04.ditamap
+++ b/id.am-04.ditamap
@@ -4,6 +4,10 @@
     <topichead navtitle="ID.AM-04">
         <topicref href="topics/nist.gov/id.am-04/statement.dita" audience="general" product="csf20"/>
         <topicref href="topics/nist.gov/SP800-82r3/no-guidance.dita" product="800-82"/>
+        <topichead navtitle="Manufacturing Profile Guidance" product="8183" audience="mfg">
+            <topicref href="topics/nist.gov/NISTIR8183r1/id.am-04/L.dita"/>
+            <topicref href="topics/nist.gov/NISTIR8183r1/id.am-04/MH.dita"/>
+        </topichead>
         <topicref href="topics/nist.gov/ASTM/id.am-04.md" audience="additive" product="wk78322"
             format="markdown"/>
         <topicref href="topics/nist.gov/id.am-04/imp-examples.md" audience="general" product="csf20" format="markdown"/>
