--- a/id.am-03.ditamap
+++ b/id.am-03.ditamap
@@ -9,6 +9,7 @@
         <topichead navtitle="Manufacturing Profile Guidance" product="8183" audience="mfg">
             <topicref href="topics/nist.gov/NISTIR8183r1/id.am-03/L.dita"/>
             <topicref href="topics/nist.gov/NISTIR8183r1/id.am-03/MH.dita"/>
+            <topicref href="topics/nist.gov/NISTIR8183r1/de.ae-01/LMH.dita"/>
         </topichead>
         <topicref href="topics/nist.gov/ASTM/id.am-03.md" audience="additive" product="wk78322"
             format="markdown"/>
