--- a/id.am-01.ditamap
+++ b/id.am-01.ditamap
@@ -2,7 +2,7 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <topichead navtitle="ID.AM-01">
-        <topicref href="topics/nist.gov/id.am-01/statement.dita" audience="general" product="csf20"/>
+        <topicref href="topics/nist.gov/id.am-01/statement.dita" audience="general"/>
         <topichead navtitle="Manufacturing Profile Guidance" product="8183" audience="mfg">
             <topicref href="topics/nist.gov/NISTIR8183r1/id.am-01/L.dita"/>
             <topicref href="topics/nist.gov/NISTIR8183r1/id.am-01/M.dita"/>
