--- a/id.am-04.ditamap
+++ b/id.am-04.ditamap
@@ -2,7 +2,7 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <topichead navtitle="ID.AM-04">
-        <topicref href="topics/nist.gov/id.am-04/statement.dita" audience="general" product="csf20"/>
+        <topicref href="topics/nist.gov/id.am-04/statement.dita" audience="general"/>
         <topicref href="topics/nist.gov/SP800-82r3/no-guidance.dita" product="800-82"/>
         <topichead navtitle="Manufacturing Profile Guidance" product="8183" audience="mfg">
             <topicref href="topics/nist.gov/NISTIR8183r1/id.am-04/L.dita"/>
