Edited ID.AM-03 supplemental guidance for ASTM

--- a/id.am-03.ditamap
+++ b/id.am-03.ditamap
@@ -14,6 +14,8 @@
             <topicref href="topics/nist.gov/NISTIR8183r1/id.am-03/MH.dita"/>
             <topicref href="topics/nist.gov/NISTIR8183r1/de.ae-01/LMH.dita"/>
         </topichead>
+        <topicref href="topics/nist.gov/ASTM/id.am-03/general.md" audience="general"
+            product="wk78322" format="markdown"/>
         <topicref href="topics/nist.gov/ASTM/id.am-03/ot.md" audience="ot" product="wk78322"
             format="markdown"/>
         <topicref href="topics/nist.gov/ASTM/id.am-03/additive.md" audience="additive"
